scss/partials/_stream_view_item.scss
div.stream-view-item {
  width: 932px;
  margin-top: 16px;

  @include mobile() {
    width: 100%;
  }

  &:not(.expanded).show-continue-reading {
    div.stream-view-item-body {
      div.stream-body-left {
        div.stream-item-body-container {
          div.stream-item-body {
            overflow: hidden;
            max-height: 400px;
            &:after {
              display: block;
            }
          }

          button.expand-button {
            display: block;
          }
        }
      }
    }
  }

  &:hover {
    div.stream-view-item-header {
      div.more-button {
        button.more-ellipsis {
          background-image: cdnUrl("/img/ML/vertical_ellipsis_deep_navy.svg"); 
        }
      }
    }
  }

  div.stream-view-item-header {
    height: 72px;
    background-color: $light_tan;
    padding: 20px 24px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;

    @include mobile() {
      border-top-left-radius: 0px;
      border-top-right-radius: 0px;
    }

    div.stream-header-head-author {
      float: left;
      width: 55%;
      padding-right: 20px;
      overflow: hidden;

      @include activity-author(32);
    }

    div.more-button {
      float: right;
      position: relative;
      margin-right: -6px;

      button.more-ellipsis {
        width: 24px;
        height: 24px;
        padding: 2px 10px;
        display: block;
        background-image: cdnUrl("/img/ML/vertical_ellipsis_ui_grey.svg");
        background-position: center;
        background-size: 4px 20px;
        background-repeat: no-repeat;
      }

      div.activity-move {
        position: absolute;
        top: 36px;
        left: unset;
        right: -10px;

        @include mobile() {
          right: -10px;
        }
      }

      div.activity-more-dropdown-menu {
        position: absolute;
        top: 36px;
        right: -10px;
        left: calc(100% - 100px + 10px);
        min-width: 100px;
        height: auto;
        border: none;
        outline: none;
        box-shadow: none;
        background-color: transparent;
        overflow: visible;
        z-index: 100;

        div.triangle {
          position: absolute;
          top: -7px;
          left: calc(100% - 30px);
          background-color: white;
          border-top: 1px solid rgba(177,184,192,0.50);
          border-left: 1px solid rgba(177,184,192,0.50);
          transform: rotate(45deg);
          width: 15px;
          height: 15px;

          @include mobile() {
            display: none;
          }
        }

        ul.activity-card-more-menu {
          background-color: white;
          border: 1px solid rgba(177,184,192,0.50);
          box-shadow: 0 4px 10px 1px rgba(0,0,0,0.10);
          border-radius: 5px;
          margin: 0px;
          padding: 10px 13px 6px 8px;
          min-height: 50px;
          list-style-type: none;
          width: 100%;

          li {
            padding: 3px 8px;
            @include avenir_M();
            font-size: 14px;
            color: $carrot_light_gray_3;
            cursor: pointer;
            background-color: transparent;

            @include big_web() {
              &:hover {
                background-color: rgba($carrot_light_gray_4, 0.2);
              }
            }
          }
        }
      }
    }
  }

  div.stream-view-item-body {
    padding: 0px;
    display: flex;
    flex-direction: row;
    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;
    background-color: #FDFCFB;

    @include mobile() {
      border-bottom-left-radius: 0px;
      border-bottom-right-radius: 0px;
      display: block;
      flex-direction: unset;
    }

    div.stream-body-left {
      flex-grow: 0;
      flex-shrink: 0;
      width: 545px;
      position: relative;
      padding: 40px 40px 88px 40px;
      background-color: white;

      @include mobile() {
        width: 100%;
        padding: 32px 24px;
        margin: 0px;
      }

      div.stream-view-attachments {
        position: absolute;
        bottom: 104px;
        width: 465px;

        @include mobile() {
          position: relative;
          bottom: unset;
        }
      }

      span.posted-in {
        @include avenir_M();
        font-size: 14px;
        color: $ui_grey;
      }

      div.stream-item-headline {
        margin-top: 16px;
        @include activity-title();
        @include avenir_H();
        font-size: 22px;
        color: $deep_navy;

        @include mobile() {
          margin-top: 16px;
        }
      }

      div.stream-item-body-container {

        div.stream-item-body {
          position: relative;

          &:after {
            display: none;
            $gradient_base_color: white;
            content: "";
            position: absolute;
            height: 48px;
            bottom: 0px;
            left: 0px;
            right: 0px;
            pointer-events: none;
            background: -moz-linear-gradient(bottom,  rgba($gradient_base_color, 1) 0%, rgba($gradient_base_color,0) 100%); /* FF3.6+ */
            background: -webkit-gradient(linear, bottom, top, color-stop(0%,rgba($gradient_base_color,0)), color-stop(100%,rgba($gradient_base_color,1))); /* Chrome,Safari4+ */
            background: -webkit-linear-gradient(bottom,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* Chrome10+,Safari5.1+ */
            background: -o-linear-gradient(bottom,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* Opera 11.10+ */
            background: -ms-linear-gradient(bottom,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* IE10+ */
            background: linear-gradient(to top,  rgba($gradient_base_color, 1) 0%,rgba($gradient_base_color,0) 100%); /* W3C */
            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$gradient_base_color}', endColorstr='transparent',GradientType=0 ); /* IE6-9 */
          }

          div.stream-item-body-inner {
            margin-top: 24px;
            @include activity-body(18);
            @include avenir_BOOK();
            color: $deep_navy;
            line-height: 24px;

            div.carrot-no-preview, a.carrot-no-preview {
              display: none;
            }
          }
        }

        button.expand-button {
          margin-top: 24px;
          width: 100%;
          height: 40px;
          border-radius: 100px;
          border: 2px solid $feint_emerald;
          color: $carrot_green;
          @include avenir_M();
          font-size: 16px;
          text-align: center;
          display: none;
        }
      }

      div.stream-mobile-comments {
        background-color: #FDFCFB;

        @include mobile() {
          background-color: transparent;
          margin-top: 24px;
        }
      }

      div.stream-mobile-comments-summary {
        margin-left: 16px;
        float: left;

        @include mobile() {
          margin-left: 24px;
        }

        div.zero-comments {
          padding-left: 22px;
          @include avenir_M();
          font-size: 14px;
          color: $ui_grey;
          margin-top: 7px;
          position: relative;

          &:before {
            content: "";
            width: 14px;
            height: 14px;
            background-image: cdnUrl("/img/ML/reply_comment_shape.svg");
            background-size: 14px 14px;
            background-position: center;
            background-repeat: no-repeat;
            position: absolute;
            top: 2px;
            left: 0px;
          }
        }
      }

      div.stream-item-reactions {
        height: 32px;
        margin-top: 24px;
        position: absolute;
        bottom: 40px;

        div.reactions {
          margin-top: 3px;
        }

        @include mobile() {
          position: relative;
          bottom: unset;

          div.reactions {
            float: left;
          }
        }
      }
    }

    div.stream-body-right {
      flex-grow: 0;
      flex-shrink: 0;
      width: 387px;
      min-height: 300px;
      position: relative;
      padding: 32px 20px 40px 32px;
      background-color: #FDFCFB;
      max-height: 685px;
      border-bottom-right-radius: 6px;

      &.expanded {
        max-height: initial;
      }

      div.stream-body-comments {
        height: 100%;

        &.add-comment-expanded {
          div.stream-comments {
            height: calc(100% - 140px);
          }
        }

        div.stream-comments {
          margin-top: 8px;
          height: calc(100% - 58px);
        }
      }

      div.add-comment-box-container {
        width: calc(100% - 12px);
        margin-right: 12px;

        div.add-comment-box {

          &.show-buttons {
            div.emoji-picker {
              top: unset;
              bottom: 9px;
              right: 60px;
              left: unset;
            }

            div.add-comment-internal {

              div.add-comment {
                width: 100%;
              }
            }
          }

          div.emoji-picker {
            button.emoji-button {
              background-size: 16px 16px;
              background-position: 50% 70%;
              opacity: 0.7;

              &:hover {
                opacity: 1;
              }
            }
          }

          div.add-comment-internal{
            position: relative;
          }
        }
      }
    }
  }
}

